<resources>
    <string name="app_name">Single.App.Screen</string>
    <string name="business_description">I can design like you want ...</string>
    <string name="text2">Ebook</string>
    <string name="text3">Book</string>
    <string name="text4">Advertising and many more </string>
    <string name="Fin_text5">fakecontact@gmail.com</string>
    <string name="Fin_text6">KolorfulDreamsArt Kda in youtube</string>
</resources>
